correct-menu-items-gap-stylesheet

--- a/styles.css
+++ b/styles.css
@@ -625,12 +625,14 @@ label {
     justify-content: center;
     height: initial;
     width: 100%;
+    box-shadow: 0px 0.5px 0px #dddfe6;
   }
 
   #mainHeader ul {
     text-align: right;
     display: flex;
     flex-direction: row;
+    gap: 60px;
     list-style: none;
     padding: 0;
     margin-top: 38px;
@@ -653,9 +655,7 @@ label {
   }
 
   #mainHeader ul button:hover {
-    border-bottom: #1a2236;
-    border-style: solid;
-    border: 1px;
+    box-shadow: 0px 1px #1a2236;
   }
 
   .mnuBtn {
